Fix: dropdown menus no longer overlap
The hidden dropdown menus were overlapping the active menu.
This is because we were hiding them just using opacity.
The element was still there, just transparent.

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -13,10 +13,10 @@
         background-image:url('../img/fa-svg/gray/svg/chevron-down.svg'); padding-left:1.7em;
 
         &[aria-expanded="true"] + .links {
-            opacity: 1;
+            display:block;
         }
         &[aria-expanded="false"] + .links {
-            opacity: 0;
+            display:none;
         }
     }
 
